# aswe

./: .coveragerc  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .prettierrc  .readthedocs.yaml  404.html  LICENSE  README.md  calendar_credentials.json  calendar_token.pickle  calendar_token.txt  cspell.json  index.html  mkdocs.yaml  objects.inv  pyproject.toml  requirements.txt  requirements_dev.txt
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml  question.yaml
.github/workflows/: codecov.yaml  codeql.yaml  mkdocs.yaml  pytest.yaml
api/calendar/: index.html
api/event/: index.html
api/finance/: index.html
api/navigation/: index.html
api/news/: index.html
api/sport/: index.html
api/weather/: index.html
aswe/: __init__.py
aswe/api/: basketball.ipynb  calendar.ipynb  calendar.py  event.ipynb  f1.ipynb  finance.py  finances.ipynb  football.ipynb  handball.ipynb  navigation.ipynb  navigation.py  news.ipynb  news.py  sport.ipynb  weather.ipynb
aswe/api/calendar/: calendar.py  data.py
aswe/api/event/: event.ipynb  event.py  event_data.py  event_params.py
aswe/api/finance/: finance.py
aswe/api/navigation/: maps.py  navigation.ipynb  trip_data.py  vvs.py
aswe/api/news/: news.py
aswe/api/sport/: basketball.py  f1.py  football.py  handball.py
aswe/api/sports/: basketball.py  f1.py  football.py  handball.py
aswe/api/weather/: weather.ipynb  weather.py  weather_params.py
aswe/core/: agent.py  data.py  objects.py  speech_text.py  speech_to_text.ipynb  speech_to_text.py  use_case.py  user_interaction.py
aswe/core/use_cases/: __init__.py  event.py  general.py  morning_briefing.py  sport.py  transportation.py
aswe/use_cases/: __init__.py  event.py  general.py  morning_briefing.py  navigation.py  sport.py  transportation.py
aswe/utils/: abstract.py  date.py  error.py  general.py  http_request.py  node_object.py  request.py  shell.py  speech_text.py  text.py  validate.py
core/: index.html
data/: codecov.yaml  quotes.json  user.json
data/finance/: country_currency_mapping.csv
data/flowcharts/: layerd_architecture.drawio
data/use_case/: quotes.json
data/vvs/: vvs_haltestelle_j22.csv
docs/: core.md  requirements.txt  requirements_docs.txt  utils.md
docs/api/: calendar.md  event.md  finance.md  navigation.md  news.md  sport.md  weather.md
docs/aswe/: index.md
docs/core/: agent.md  data.md  objects.md  use_cases.md  user_interaction.md
docs/core/use_cases/: event.md  general.md  morning_briefing.md  sport.md  transportation.md
docs/documentation/: hello_world.md
docs/extra/: refresh_on_toggle_dark_light.js
docs/use_cases/: event.md  general.md  morning_briefing.md  navigation.md  sport.md  transportation.md
docs/utils/: abstract.md  date.md  error.md  request.md  shell.md  text.md  utils.md  validate.md
license/: index.html
search/: search_index.json
src/: hello_world.py  test.ipynb
src/api/: calendar.ipynb  event.ipynb  finances.ipynb  navigation.ipynb  news.ipynb  sport.ipynb  weather.ipynb
src/api/event/: event.py  event_params.py
src/api/weather/: weather.py  weather_params.py
src/core/: speech_to_text.ipynb  speech_to_text.py  use_case.py
src/utils/: http_request.py  node_object.py  validate_date.py
tests/: experiments.ipynb  test_hello_world.py  test_http_request.py
tests/api/: test_calendar.py  test_finance.py  test_navigation.py  test_news.py
tests/api/calendar/: test_calendar.py  test_data.py
tests/api/event/: test_event.py  test_event_params.py
tests/api/finance/: test_finance.py
tests/api/navigation/: test_maps.py  test_trip_data.py  test_vvs.py
tests/api/news/: test_news.py
tests/api/sport/: test_f1.py  test_football.py  test_handball.py
tests/api/sports/: test_basketball.py  test_f1.py  test_football.py  test_handball.py
tests/api/vvs/: test_trip_data.py
tests/api/weather/: test_weather.py  test_weather_params.py
tests/core/: test_agent.py  test_quotes.py  test_user_interaction.py
tests/use_cases/: test_event.py  test_morning_briefing.py  test_navigation.py  test_sport.py  test_use_case_event.py  test_use_case_sport.py  test_use_case_transportation.py  test_use_cases_event.py
tests/utils/: test_date.py  test_general.py  test_http_request.py  test_request.py  test_shell.py  test_text.py  test_validate.py  test_validate_date.py
use_cases/event/: index.html
use_cases/general/: index.html
use_cases/morning_briefing/: index.html
use_cases/navigation/: index.html
use_cases/sport/: index.html
utils/: index.html
